@startuml

interface Type
interface NumericType

abstract class AbstractType

class Arr
class F64
class Fun
class I64
class Str
class Void

Type <|-- NumericType
Type <|.. AbstractType

NumericType <|.. F64
NumericType <|.. I64

AbstractType <|-- Arr
AbstractType <|-- F64
AbstractType <|-- Fun
AbstractType <|-- I64
AbstractType <|-- Str
AbstractType <|-- Void

Arr o-- Type : elementType

Fun o-- "*" Type : argTypes
Fun o-- Type : returnType

@enduml
